ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: ns-app
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "k8s-prd-python.sathyalabs.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-python-demo
            port:
              number: 80
  - host: "k8s-prd-java.sathyalabs.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-java-demo
            port:
              number: 80
